# RoboCam3.1

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSES.md  PROJECT_STATE.md  README.md  TESTING.md  pyproject.toml  requirements.txt  robocam31.py  setup.bat  setup.sh  start_robocam.bat  start_robocam.sh
.github/workflows/: ci.yml
config/: default_config.json
config/experiment_presets/: default.json
docs/: history.md  recording_modes.md  robustness_log.md
robocam/: __init__.py  __main__.py  calibration.py  camera.py  config.py  experiment.py  hw_state.py  motion.py  peripherals.py  postprocess.py  session.py
scripts/: install_playerone_sdk.py  post_process_raw.py  reconstruct_vfr.py
tests/: test_calibration.py  test_cli.py  test_config.py  test_experiment.py
ui/: calibration_panel.py  camera_widget.py  experiment_panel.py  main_window.py  manual_control_panel.py  motion_profiles_panel.py  processing_panel.py  setup_panel.py  well_grid.py
